--- a/Daniel.html
+++ b/Daniel.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="qUKPphkdda1cAq8o2C0TiKL/K5/LRUQOYl1/WrYkhcp3qIy267fsQrv7RJ3nJ8dd6KqiBh5awbFPsQfKmwmdtYFAYTv8oHbLYS6ckqzO3hiQMpfrVkMBUH4cKWEDGOz5">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="SK1aqShdIYIpc1jue2zFJDV26UoNzBt5tsYRtL7mVW7AX2iXQfrhqWrG8pGDESj2CL77NuJCCOqYmEnteC0ucG51ALQAJNrxd3bD4++XHASGm/wcDGQHV8PZehkl5z81">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
