--- a/cyndi.html
+++ b/cyndi.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="X5HG5rEXK1uNkVFnaAUMqHTkh4odCvn+LqLPBuaVHbOaKDTYOTC5A25SvXo1JM4Mz67BxlHaZedZaXp9uOn1gPsjukhXQEJXrej4c6fmWbqc+4n+ov0CCdqxQDMITFUg">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="4tjmw4VUolFL2eFR21DNbYfnBblq4VM73D+5lFCzoWgEvLVqblCWtAJE0yK/uYQbD/H0V9yQLYSk/KK66DBcte09SZtmDvUlJQSRsQmUF1lCysR1Cxo1I97GGZou5NUD">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
