--- a/products.html
+++ b/products.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="mbr-section content5 cid-r6QfwbDyCS" id="content5-49">
+<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="mbr-section content5 cid-r6QfwbDyCS" id="content5-49">
 
     
 
@@ -134,7 +134,7 @@
                     <div class="card-box p-5">
                         <h4 class="card-title py-2 mbr-fonts-style align-center mbr-white display-5"><strong>
                             Automobile</strong></h4>
-                        <p class="mbr-text mbr-fonts-style mbr-white display-7">Every driver is different. Every vehicle is different. Every type of insurance situation is different. Let Barrett Insurance find the best coverage to protect you, your vehicles and your situation.</p>
+                        <p class="mbr-text mbr-fonts-style mbr-white display-7"><a href="proposal.html" class="text-secondary">Every driver is different. Every vehicle is different. Every type of insurance situation is different. Let Barrett Insurance find the best coverage to protect you, your vehicles and your situation.</a></p>
                     </div>
                 </div>
             </div>
@@ -146,9 +146,9 @@
                     <div class="card-box p-5">
                         <h4 class="card-title py-2 mbr-fonts-style align-center mbr-white display-5"><strong>
                             Commercial</strong></h4>
-                        <p class="mbr-text mbr-fonts-style mbr-white display-7">
-                            Commercial Insurance is complicated and you have big dreams to cover. Barrett Insurance can share your burden by helping you design an insurance package that is right for your business.<br><br>
-                        </p>
+                        <p class="mbr-text mbr-fonts-style mbr-white display-7"><a href="proposal.html" class="text-secondary">
+                            Commercial Insurance is complicated and you have big dreams to cover. Barrett Insurance can share your burden by helping you design an insurance package that is right for your business.</a><br><br><a href="proposal.html">
+                        </a></p>
                     </div>
                 </div>
             </div>
@@ -160,8 +160,7 @@
                     <div class="card-box p-5">
                         <h4 class="card-title py-2 mbr-fonts-style align-center mbr-white display-5"><strong>
                             Toys</strong></h4>
-                        <p class="mbr-text mbr-fonts-style mbr-white display-7">We work with standard and specialty underwriters to protect everything from jet skis to boats, dirt bikes to motorcycles, pop-ups to motorhomes and everything 
-<br>in between.<br><br></p>
+                        <p class="mbr-text mbr-fonts-style mbr-white display-7"><a href="proposal.html" class="text-secondary">We work with standard and specialty underwriters to protect everything from jet skis to boats, dirt bikes to motorcycles, pop-ups to motorhomes and everything in between.</a><br><br></p>
                     </div>
                 </div>
             </div>    
@@ -185,7 +184,7 @@
                     </div>
                     <div class="card-box p-5">
                         <h4 class="card-title py-2 mbr-fonts-style align-center mbr-white display-5"><strong>Homeowners &amp; Renters Insurance</strong></h4>
-                        <p class="mbr-text mbr-fonts-style mbr-white display-7">Every home is built differently. Protect one of your biggest investments with the right kind of insurance.<br><br></p>
+                        <p class="mbr-text mbr-fonts-style mbr-white display-7"><a href="proposal.html" class="text-secondary">Every home is built differently. Protect one of your biggest investments with the right kind of insurance.</a><br><br></p>
                     </div>
                 </div>
             </div>
@@ -196,7 +195,7 @@
                     </div>
                     <div class="card-box p-5">
                         <h4 class="card-title py-2 mbr-fonts-style align-center mbr-white display-5"><strong>Life, Health &amp; Medicare Insurance</strong></h4>
-                        <p class="mbr-text mbr-fonts-style mbr-white display-7">Our life and health experts specialize in designing group policies for businesses and plans that meet your individual needs.<br><br></p>
+                        <p class="mbr-text mbr-fonts-style mbr-white display-7"><a href="healthproposal.html" class="text-secondary">Our life and health experts specialize in designing group policies for businesses and plans that meet your individual needs.</a><br><br></p>
                     </div>
                 </div>
             </div>
@@ -207,9 +206,9 @@
                     </div>
                     <div class="card-box p-5">
                         <h4 class="card-title py-2 mbr-fonts-style align-center mbr-white display-5"><strong>Farm &amp; Country Estate Insurance</strong></h4>
-                        <p class="mbr-text mbr-fonts-style mbr-white display-7">
-                            From sows to plows and barns to silos, Barrett Insurance can cover your farms and country estates.<br><br><br>
-                        </p>
+                        <p class="mbr-text mbr-fonts-style mbr-white display-7"><a href="proposal.html" class="text-secondary">
+                            From sows to plows and barns to silos, Barrett Insurance can cover your farms and country estates.</a><br><br><br><a href="proposal.html">
+                        </a></p>
                     </div>
                 </div>
             </div>    
